6939196: method handle signatures off the boot class path get linkage errors

Adjust MethodType lookup logic to search off the BCP, but not to cache those results

Reviewed-by: twisti